Bug 87759 - [HSW] rcs flip hang with multimonitor
Summary: [HSW] rcs flip hang with multimonitor
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL: http://patchwork.freedesktop.org/patc...
Whiteboard:
Keywords:
: 87940 88872 88884 89666 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-27 02:20 UTC by Scott Tsai
Modified: 2016-09-28 13:40 UTC (History)
7 users (show)

See Also:
i915 platform:
i915 features:


Attachments
XZ compressed GPU crash dump (59.51 KB, application/x-xz)
2014-12-27 02:24 UTC, Scott Tsai
no flags Details

Description Scott Tsai 2014-12-27 02:20:35 UTC
GPU hang during video playback.
GPU PCI ID: 8084:0412
Using dual screen configuration of DP plus HDMI at the time.

Software Versions:
kernel-3.18.1-2.fc22.x86_64
xorg-x11-drv-intel-2.99.916-3.20141117.fc21.x86_64
mesa-dri-drivers-10.4.0-1.20141214.fc21.x86_64
libdrm-2.4.58-3.fc21.x86_64


Hardware:
00:02.0 VGA compatible controller [0300]: Intel Corporation Xeon E3-1200 v3/4th Gen Core Processor Integrated Graphics Controller [8086:0412] (rev 06)

Dual Screen Configuration:
creen 0: minimum 8 x 8, current 4480 x 1440, maximum 32767 x 32767
DP1 connected primary 2560x1440+1920+0 (normal left inverted right x axis y axis) 597mm x 336mm
   2560x1440     59.95*+
   1920x1200     59.88  
   1920x1080     60.00    60.00    50.00    59.94    24.00    23.98  
   1920x1080i    60.00    50.00    59.94  
   1600x1200     60.00  
   1680x1050     59.95  
   1280x1024     75.02    60.02  
   1280x800      59.81  
   1152x864      75.00  
   1280x720      60.00    50.00    59.94  
   1024x768      75.08    60.00  
   800x600       75.00    60.32  
   720x576       50.00  
   720x480       60.00    59.94  
   640x480       75.00    60.00    59.94  
   720x400       70.08  
HDMI1 disconnected (normal left inverted right x axis y axis)
HDMI2 disconnected (normal left inverted right x axis y axis)
HDMI3 connected 1920x1200+0+0 (normal left inverted right x axis y axis) 519mm x 324mm
   1920x1200     59.95*+
   1920x1080     60.00    59.94  
   1920x1080i    60.00    59.94  
   1600x1200     60.00  
   1280x1024     75.02    60.02  
   1152x864      75.00  
   1280x720      60.00    59.94  
   1024x768      75.08    60.00  
   800x600       75.00    60.32  
   720x576i      50.00  
   720x480       60.00    59.94  
   720x480i      60.00    59.94  
   640x480       75.00    60.00    59.94  
   720x400       70.08  
VGA1 disconnected (normal left inverted right x axis y axis)
VIRTUAL1 disconnected (normal left inverted right x axis y axis)
Comment 1 Scott Tsai 2014-12-27 02:24:38 UTC
Created attachment 111382 [details]
XZ compressed GPU crash dump
Comment 2 Chris Wilson 2014-12-27 09:43:25 UTC
Sigh.

diff --git a/drivers/gpu/drm/i915/intel_display.c b/drivers/gpu/drm/i915/intel_display.c
index d01db1b82869..ed2102e62271 100644
--- a/drivers/gpu/drm/i915/intel_display.c
+++ b/drivers/gpu/drm/i915/intel_display.c
@@ -9703,7 +9703,7 @@ static int intel_crtc_page_flip(struct drm_crtc *crtc,
                if (obj->tiling_mode != work->old_fb_obj->tiling_mode)
                        /* vlv: DISPLAY_FLIP fails to change tiling */
                        ring = NULL;
-       } else if (IS_IVYBRIDGE(dev)) {
+       } else if (IS_IVYBRIDGE(dev) || IS_HASWELL(dev)) {
                ring = &dev_priv->ring[BCS];
        } else if (INTEL_INFO(dev)->gen >= 7) {
                ring = i915_gem_request_get_ring(obj->last_read_req);
Comment 3 Chris Wilson 2014-12-27 09:53:06 UTC
http://patchwork.freedesktop.org/patch/39627/
Comment 4 Scott Tsai 2014-12-29 14:02:27 UTC
Been testing the patch for the last two days and it does indeed fix my problem.
Comment 5 Chris Wilson 2015-01-01 20:50:03 UTC
*** Bug 87940 has been marked as a duplicate of this bug. ***
Comment 6 Jani Nikula 2015-01-05 13:34:48 UTC
Fixed by

commit 26acf418e61321193584fc1ad1b30698ab4495ea
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Dec 27 09:48:28 2014 +0000

    drm/i915: Ban Haswell from using RCS flips

in drm-intel-fixes, thanks for the report and testing.
Comment 7 Chris Wilson 2015-01-31 10:29:15 UTC
*** Bug 88884 has been marked as a duplicate of this bug. ***
Comment 8 Chris Wilson 2015-02-18 15:29:58 UTC
*** Bug 88872 has been marked as a duplicate of this bug. ***
Comment 9 Chris Wilson 2015-03-19 07:42:36 UTC
*** Bug 89666 has been marked as a duplicate of this bug. ***
Comment 10 Chris Bainbridge 2015-04-02 14:00:29 UTC
Is this fix also required for Valleyview? https://launchpadlibrarian.net/201861206/kern.log looks like the same stacktrace and afaik Valleyview uses the same GPU core as Ivybridge and Haswell, so it would make sense that it needs the same fix.
Comment 11 Chris Wilson 2015-04-02 14:13:16 UTC
No. Valleyview has a different display engine, and only ever supported flips from the BCS ring. That trace is not from a dead GPU.
Comment 12 Jari Tahvanainen 2016-09-28 13:40:45 UTC
Closing resolved+fixed which has been verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.